--- a/src/components/escuela/diplomados.astro
+++ b/src/components/escuela/diplomados.astro
@@ -1,4 +1,4 @@
-<section class="w-full bg-[#ffe1d6]">
+<section class="w-full bg-[#ffe1d6] font-Montserrat ">
     <!-- DIPLOMADO MAQUILLAJE PROFESIONAL -->
     <article class="w-full pt-16">
         <div class="mx-auto w-full max-w-screen-xl px-4 py-6 sm:px-6 sm:py-24 lg:px-8 lg:py-12">
