--- a/src/components/escuela/escuela.astro
+++ b/src/components/escuela/escuela.astro
@@ -152,8 +152,8 @@
   </div>
 </section> -->
 
-<section class="w-full py-6 bg-[#fcefe9]">
-  <div class="container mx-auto px-4 flex flex-col justify-center items-center">
+<section class="w-full bg-[#fcefe9] pt-16 font-Montserrat">
+  <div class="mx-auto w-full max-w-screen-xl px-4 sm:px-6 lg:px-8 py-6 md:py-10 lg:py-12">
     <!-- Encabezado con título -->
     <div class="w-full bg-white p-4 md:p-6 rounded-lg shadow-lg mb-6 md:mb-8">
       <h1 class="text-2xl md:text-4xl font-bold text-center text-black/70">Escuela de Alma</h1>
