--- a/src/components/nosotros/nosotros.astro
+++ b/src/components/nosotros/nosotros.astro
@@ -19,12 +19,12 @@
                 
                         <!-- Información de contacto -->
                         <article>
-                            <h2 class="text-lg md:text-xl lg:text-2xl font-bold text-gray-800 mb-2 md:mb-3">Alma Studio & Academy</h2>
-                            <p class="text-gray-600 font-semibold mb-6">Estudio de maquillaje premium en Bogotá, Colombia</p>
+                            <h2 class="text-lg md:text-xl lg:text-2xl font-bold text-black/70 mb-2 md:mb-3">Alma Studio & Academy</h2>
+                            <p class="text-black/70 font-semibold mb-6">Estudio de maquillaje premium en Bogotá, Colombia</p>
                     
                             <div class="bg-white p-4 md:p-5 rounded-lg shadow-md">
-                                <div class="text-start text-gray-700 space-y-4">
-                                    <p><strong>Nuestra dirección de sitio web es:</strong> <a href="https://www.almamakeup.com.co" class="text-gray-800 hover:underline">https://www.almamakeup.com.co</a></p>
+                                <div class="text-start text-black/70 space-y-4">
+                                    <p><strong>Nuestra dirección de sitio web es:</strong> <a href="https://www.almamakeup.com.co" class="text-black/70 hover:underline">https://www.almamakeup.com.co</a></p>
                                 
                                     <address class="not-italic">
                                         <p><strong>Contacto:</strong><br>
@@ -53,7 +53,7 @@
             <div class="divider" role="separator"></div>
             
             <!-- Política de privacidad -->
-            <article class="text-justify">
+            <section class="text-justify text-black/70">
                 <header>
                     <h2 class="text-2xl font-bold mb-4">Política de Privacidad</h2>
                 </header>
@@ -131,7 +131,7 @@
                     <p>Para ejercer sus derechos, envíe su solicitud al correo <a href="mailto:almalustudio@gmail.com" class="text-black font-semibold hover:underline">almalustudio@gmail.com</a> y facilite la siguiente información: nombre, apellido, correo electrónico y cualquier otro dato necesario para confirmar su identidad para que podamos tramitar la solicitud.</p>
                     <p>Si tiene alguna duda o algún comentario en relación con esta Política de privacidad o con la forma en que Alma Studio & Academy obtiene y utiliza sus Datos, también puede contactarse en la siguiente Línea Telefónica: <span class="text-black font-semibold">+57 (316)524-6636</span></p>
                 </section>
-            </article>
+            </section>
             
         </main>
     </div>
