--- a/src/components/index/3-Servicios.astro
+++ b/src/components/index/3-Servicios.astro
@@ -21,9 +21,10 @@
             loading="lazy" 
             decoding="async" />
         </figure>
+        
         <div class="card-body items-center text-center p-4">
           <h2 class="card-title text-[#d45d3a]">Maquillaje Social</h2>
-          <p class="text-sm italic text-[#f5a28c] mb-2">"Realza tu belleza natural con expertos"</p>
+          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Realza tu belleza natural con expertos"</p>
           <p class="text-gray-700">Transformación profesional para eventos especiales, destacando tus mejores facciones.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
@@ -51,7 +52,7 @@
         </figure>
         <div class="card-body items-center text-center p-4">
           <h2 class="card-title text-[#d45d3a]">Maquillaje Quinceañeras</h2>
-          <p class="text-sm italic text-[#f5a28c] mb-2">"Brillo y magia para tu gran día"</p>
+          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Brillo y magia para tu gran día"</p>
           <p class="text-gray-700">Diseño exclusivo para resaltar tu personalidad en esta celebración única.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
@@ -79,7 +80,7 @@
         </figure>
         <div class="card-body items-center text-center p-4">
           <h2 class="card-title text-[#d45d3a]">Maquillaje Novias</h2>
-          <p class="text-sm italic text-[#f5a28c] mb-2">"Belleza eterna para tu día perfecto"</p>
+          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Belleza eterna para tu día perfecto"</p>
           <p class="text-gray-700">Look radiante y duradero que resaltará en tus fotos y durante toda la celebración.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
@@ -107,7 +108,7 @@
         </figure>
         <div class="card-body items-center text-center p-4">
           <h2 class="card-title text-[#d45d3a]">Peinados</h2>
-          <p class="text-sm italic text-[#f5a28c] mb-2">"Estilo que complementa tu esencia"</p>
+          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Estilo que complementa tu esencia"</p>
           <p class="text-gray-700">Desde recogidos elegantes hasta sueltos románticos, creamos el look ideal para ti.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white">
@@ -135,7 +136,7 @@
         </figure>
         <div class="card-body items-center text-center p-4">
           <h2 class="card-title text-[#d45d3a]">Escuela de alma</h2>
-          <p class="text-sm italic text-[#f5a28c] mb-2">"Formación profesional en belleza"</p>
+          <p class="text-sm font-Montserrat-Italic text-[#f5a28c] mb-2">"Formación profesional en belleza"</p>
           <p class="text-gray-700">Conviértete en experto con nuestro programa completo de maquillaje y estilismo.</p>
           <div class="card-actions mt-4 flex flex-col sm:flex-row justify-center items-center gap-2">
             <button class="btn bg-[#f5a28c] hover:bg-[#e89179] border-none text-white ">
@@ -151,6 +152,6 @@
         </div>
       </div>
     </div>
-  </Div>
+  </div>
 </section>
 
