--- a/src/components/header-footer/1-Header.astro
+++ b/src/components/header-footer/1-Header.astro
@@ -2,9 +2,9 @@
     <!-- Logo con enlace a inicio -->
     <div class="navbar-start w-auto">
         <a href="/" aria-label="Ir a página de inicio">
-            <div class="w-16 h-16 lg:w-20 lg:h-20 overflow-visible">
+            <div class="w-16 h-16 lg:w-18 lg:h-18 overflow-visible">
                 <img 
-                    src="/LogoNegro.webp" 
+                    src="/LogoBlanco.png" 
                     alt="Logo de la empresa - Maquillaje profesional" 
                     width="80" 
                     height="80"
@@ -45,7 +45,7 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
             </svg>
         </label>
-        <ul id="mobile-menu" class="menu menu-sm absolute right-4 top-16 bg-white rounded-box z-50 w-52 p-2 shadow border border-[#E5989B] hidden" role="menu">
+        <ul id="mobile-menu" class="menu menu-sm absolute right-8 top-16 bg-white rounded-box z-50 w-52 p-2 shadow border border-[#E5989B] hidden" role="menu">
             <li><a href="/" class="hover:bg-[#FFB4A2] px-4 py-2 text-black" role="menuitem" aria-current="page">Inicio</a></li>
             <li>
                 <details>
